# RMBG-2.0-RUN

./: CMakeLists.txt  README.md  detailsscreen.ui  exitdialog.ui  splashscreen.ui  talkformscreen.ui
cpp/: cvprocess.cu  main.cpp  process.cpp  qtasyncsendreceive.cpp  qtcmd.cpp  qtconnected.cpp  qtgui.cpp  rtinfer.cu  rtready.cu  serverasyncsendreceive.cpp  servercmd.cpp  serverconnected.cpp
file/: change.sh  cmddialog.ui
include/: cvpacked.h  qtpacked.h  rtpacketed.h  serverpacked.h  ui_cmddialog.h  ui_detailsscreen.h  ui_exitdialog.h  ui_splashscreen.h  ui_talkformscreen.h
lib/exec/: rmbggui
test/: rmbggui.pro
